[package]
name = "peer_node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }

# Serde
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Utils
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = "4.5.32"
rand = { version = "0.8", features = ["std_rng"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
