[package]
name = "peer_node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }

# P2P
libp2p = { version = "0.55.0", features = [
    "noise",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "request-response",
    "cbor",
    "kad",
    "mdns",
] }

# Serde
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
typetag = "0.2.20"

# Cryptography
hex = "0.4.3"
sha256 = "1.5.0"

# Utils
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = "4.5.32"
dyn-clone = "1.0.17"
rand = { version = "0.8", features = ["std_rng"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }

thiserror = "2.0.12"

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# Node db
# rocksdb = "0.23.0"
